# make-pony

./: .gitignore  CMakeLists.txt  Makefile  Makefile.win  Makefile.win32  Makefile.win64  Makefile.win64.old  README.md  binaries.txt  color.c  make-pony  make-pony.c  nbt_format.txt  pngimg.c.gcov  ppm2  scan_oc.l  target.c  target.h  templates  thumbnailer
docs/: nbt_format.txt
src/: .make-pony.h.swp  CMakeLists.txt  Makefile  color.c  color.h  convert_old_oc.c  lex.yy.c  make-pony.c  make-pony.glade  make-pony.glade.h.in  make-pony.glade~  make-pony.h  nbt.c  nbt.h  new_targets.txt  pixel.c  pixel.cpp  pixel.h  pngimg.c  pngimg.h  pngimg.hpp  render.h  sorted_new_targets.txt  target.c  target.h  test_pngimg.c  thumbnailer.c  thumbnailer.h  thumbnailer_main.c
src/old_src/: Makefile  convert_target.l  pixel.hpp  pngimg.cpp  target_new.c  target_old.c  target_old.lua
templates/: thumbnailer
